docs(801): derisking pass — measured, and it corrects the F4 design again
Six results, four of which change the design.

D11.a The reserved band is STRUCTURE-variable, not just density-variable.
Measured live: chat's header band ends at y=89, Library's at y=143, because
Library stacks a tab strip between the topbar and its header. The shipped dock
reserves 96px, so it still lands inside Library's header — which is why F4
reproduced there after the fix shipped. A token derived from
--density-header-pad-y (the D4 design) would still be wrong, because the
quantity to reserve is the bottom of the surface's chrome stack, which no
header-padding token can know. ResizeObserver is back on the table.

D11.b The first browser reading showed the dock at 48px, contradicting source:
the dev stack had launched from the main checkout, 10 commits stale, still
carrying the pre-fix value. Taken at face value it would have "proved" the fix
never shipped. Same shape as the stale-ref collision check and as D10's
fingerprint — a measurement read from a proxy for its subject.

D11.c F3: the head-side cache does not drift. 807 docs ingested; SSE snapshot
and /api/status agree at both instants, and after drain the snapshot is 812
rows all DONE with zero non-DONE. This narrows rather than reproduces — a
healthy run cannot distinguish "never drifts" from "drifts only under a stalled
feed" — but it moves the frontend substrate to the front as suspect.

D11.d F1: the honest fix needs NO backend change — source/confidence already
separate "OS reported indeterminate" from "probe produced nothing". Elevation
detection is cheap and precedented (FFM, as WindowsPowerStatus already does)
but does not close the finding, since qualityKnown means the TPM-vs-PIN
distinction, not elevation. And the 0->UNKNOWN test needs no change: the
conflation is a producer bug ([int]$null is 0 in the shell one-liner), so
fixing it there is additive rather than weakening.

D11.e F6 is worse than D8 assumed. Extract sends